hide title id override behind an extra click to prevent annoyingly pasting into the wrong box.

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -213,3 +213,5 @@ p.game-description {
 .ovr-edit-btn:hover {
     background: #fff;
 }
+
+#ovTitleIdDisplay { user-select: text; }
